# Streaker

./: .gitignore  Extract_monitor_module_debugtest.py  debug_gui.py  detect_clock_mask_refactored.py  detect_monitor_cleanFLAKE8.py  detect_monitor_module.py  detect_monitor_relaxedFLAKE8.py  full_detect_description.txt  stack_sample_viewer_creates-detection-clip.py
Dahua_Display/: DahuaCam.spec  Dahua_Display.py  dahua_display_config.example.json
Final Cut/: CLAUDE.md  Full_Detect_counts.py  Full_Detect_counts_V3.py  Full_Detect_counts_old_V1.py  Full_Detect_counts_old_V2.py  Mask_editor_gui.py  StreakerPlayBack_V2.py  Streaker_PlayBack_old_V2.py  stack_monitor_advanced.py  stack_sample_creates-detection-clips_module.py  star_gui.py
Get_TLE/: -Get_TLE_with_log_file-.txt  Get_TLE_with_log_file.txt  get_tle.py  tle_config.example.json  update14_get_tle_fixed_by_claude.bat
Record/: STREAKERrec.spec  Streaker_Record_Launch.py  pyinstaller.txt  stream_capture_config.example.json
Sat_Calcs/: -Angular_Diameter_size-distance-.py  -Satellite_separation_dateconverter-.py  -virtual_sky_venus-moon-object_V2-.py  Sat_Orientation_TLE-RA-DEC_Conversion_Single-Input.py  Sat_Orientation_TLE_Convert_Single_Input_V2.py  (+7 more)
Streaker Detect/: Detect_overlay_mask_module_refactored_launch_v3.py  Full_Detect_counts.py  Mask_editor_gui.py  StreakerCompare.py  StreakerDetect.py  StreakerDetect.spec  StreakerPlayer.py  build.bat  build.sh  compare_runs.py  extract_monitor_advanced.py  mkv_clipper.py  platform_utils.py  pyproject.toml  requirements.txt  streaker_config.json  synth_test.py
(+4 files in other folders)
