[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "streaker"
version = "0.1.0"
description = "Night-sky object detection and event review tool"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
]

[project.scripts]
streaker = "StreakerDetect:main"
